--- a/styles.css
+++ b/styles.css
@@ -470,7 +470,7 @@ html {
   padding: 20px 20px;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0)
     0%, rgba(17,17,17,0.6) 100%), 
-    url('/images/data_org.webp');
+    url('images/data_org.webp');
   background-size: cover;
   position: relative;
   color: #fff;
@@ -481,7 +481,7 @@ html {
 .experience__card:nth-child(2) {
     background-image: linear-gradient(to bottom, rgba(0,0,0,0)
     0%, rgba(17,17,17,0.6) 100%), 
-    url('/images/tech-planet.jpg');
+    url('images/tech-planet.jpg');
 }
 
 .experience__card:nth-child(3) {
